--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,6 +2,9 @@
 	margin-bottom: 0px;
 
 }
+.blanco {
+	color: white;
+}
 
 .notificaciones{
 	height: 60px;
@@ -83,11 +86,11 @@
 
 #fPrincipal {
 	padding-top: 40px;
-	 background-image: url('../img/fPrincipal.png');
-     -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+     background: url('../img/Principal2.png');
+	-webkit-background-size: cover;
+  	-moz-background-size: cover;
+  	-o-background-size: cover;
+  	background-size: cover;
     width: 100%;
     height: 100%;
 }
@@ -95,7 +98,12 @@
 .fAcceder {
 	width: 100%;
 	height: 91%;
-	background-image: url('../img/fAcceder.png');
+	background: url('../img/fAcceder.png') no-repeat center center fixed;
+	-webkit-background-size: cover;
+  	-moz-background-size: cover;
+  	-o-background-size: cover;
+  	background-size: cover;
+	
 }
 
 #modal1{
@@ -107,9 +115,9 @@
 .fNegocio{
 	background: url('../img/fIngresos.png') no-repeat center center fixed;
 	-webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+  	-moz-background-size: cover;
+  	-o-background-size: cover;
+  	background-size: cover;
 
 }
 .padding-10x{
