--- a/public/css/main.css
+++ b/public/css/main.css
@@ -109,11 +109,12 @@
 #modal1{
 	background: rgba(255,255,255,1);
 	background: -moz-linear-gradient(-45deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 26%, rgba(96,203,235,1) 50%, rgba(96,203,235,1) 100%);
+	background: -webkit-linear-gradient(-45deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 26%, rgba(96,203,235,1) 50%, rgba(96,203,235,1) 100%);
 
 }
 
 .fNegocio{
-	background: url('../img/fIngresos.png') no-repeat center center fixed;
+	background: url('../img/img-2.png') no-repeat center center fixed;
 	-webkit-background-size: cover;
   	-moz-background-size: cover;
   	-o-background-size: cover;
@@ -129,4 +130,17 @@
 }
 .margen-top-15x{
 	margin-top: 15px;
+}
+.yellow{
+	background: rgba(216,213,14,.8);
+	border: 1px solid rgb(216,213,14);
+	color: black;
+}
+.black{
+	color: black;
+}
+
+.all{
+	width: 100%;
+	height: 100%;
 }
