--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,6 +2,9 @@
 	margin-bottom: 0px;
 
 }
+.blanco {
+	color: white;
+}
 
 .notificaciones{
 	height: 60px;
@@ -64,12 +67,80 @@
 .right {
 	float: right;
 }
-.fondo{
+.fRegistrar{
 	width: 100%;
 	height:91%;
-	background-color: red; 
+	 
+	background: rgba(255,255,255,1);
+	background: -moz-linear-gradient(-45deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 26%, rgba(96,203,235,1) 50%, rgba(96,203,235,1) 100%);
+	background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(255,255,255,1)), color-stop(26%, rgba(255,255,255,1)), color-stop(50%, rgba(96,203,235,1)), color-stop(100%, rgba(96,203,235,1)));
+	background: -webkit-linear-gradient(-45deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 26%, rgba(96,203,235,1) 50%, rgba(96,203,235,1) 100%);
+	background: -o-linear-gradient(-45deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 26%, rgba(96,203,235,1) 50%, rgba(96,203,235,1) 100%);
+	background: -ms-linear-gradient(-45deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 26%, rgba(96,203,235,1) 50%, rgba(96,203,235,1) 100%);
+	background: linear-gradient(135deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 26%, rgba(96,203,235,1) 50%, rgba(96,203,235,1) 100%);
 }
 
 .margen-right {
 	margin-right: 40px;
+}
+
+#fPrincipal {
+	padding-top: 40px;
+     background: url('../img/Principal2.png');
+	-webkit-background-size: cover;
+  	-moz-background-size: cover;
+  	-o-background-size: cover;
+  	background-size: cover;
+    width: 100%;
+    height: 100%;
+}
+
+.fAcceder {
+	width: 100%;
+	height: 91%;
+	background: url('../img/fAcceder.png') no-repeat center center fixed;
+	-webkit-background-size: cover;
+  	-moz-background-size: cover;
+  	-o-background-size: cover;
+  	background-size: cover;
+	
+}
+
+#modal1{
+	background: rgba(255,255,255,1);
+	background: -moz-linear-gradient(-45deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 26%, rgba(96,203,235,1) 50%, rgba(96,203,235,1) 100%);
+	background: -webkit-linear-gradient(-45deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 26%, rgba(96,203,235,1) 50%, rgba(96,203,235,1) 100%);
+
+}
+
+.fNegocio{
+	background: url('../img/img-2.png') no-repeat center center fixed;
+	-webkit-background-size: cover;
+  	-moz-background-size: cover;
+  	-o-background-size: cover;
+  	background-size: cover;
+
+}
+.padding-10x{
+	padding-top: 10px;
+}
+
+.margen-top-10x{
+	margin-top: 10px;
+}
+.margen-top-15x{
+	margin-top: 15px;
+}
+.yellow{
+	background: rgba(216,213,14,.8);
+	border: 1px solid rgb(216,213,14);
+	color: black;
+}
+.black{
+	color: black;
+}
+
+.all{
+	width: 100%;
+	height: 100%;
 }
